please please please

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:closet-cleanup": "node dist/closet-cleanup/server/server.mjs"
+    "build:ssr": "ng build && ng run closet-cleanup:server",
+    "serve:ssr": "node dist/server/main.js",
+    "start": "npm run serve:ssr"
   },
   "private": true,
   "dependencies": {
