--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,34 @@
-# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
+# Node modules
+node_modules/
 
-# Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
+# Build output
+dist/
+.browser/
+.server/
+.browser.esm/
+.server.esm/
 
-# Node
-/node_modules
-npm-debug.log
-yarn-error.log
+# Environment files
+.env
+.env.*
 
-# IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
+# OS generated files
 .DS_Store
 Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+
+# Angular specific
+.angular/cache/
+.angular/config.json
+
+# Render specific (optional)
+render.yaml
