--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0",
-    "@angular/cli": "^19.1.8"
+    "@angular/cli": "^19.1.8",
+    "@angular-devkit/build-angular": "^19.1.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.8",
     "@angular/compiler-cli": "^19.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
