--- a/package.json
+++ b/package.json
@@ -12,28 +12,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.0",
-    "@angular/common": "^19.1.0",
-    "@angular/compiler": "^19.1.0",
-    "@angular/core": "^19.1.0",
-    "@angular/forms": "^19.1.0",
-    "@angular/platform-browser": "^19.1.0",
-    "@angular/platform-browser-dynamic": "^19.1.0",
-    "@angular/platform-server": "^19.1.0",
-    "@angular/router": "^19.1.0",
-    "@angular/ssr": "^19.1.8",
-    "@nguniversal/express-engine": "^7.0.2",
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular/animations": "^16.2.0",
+    "@angular/cli": "^16.2.0",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/core": "^16.2.0",
+    "@angular/forms": "^16.2.0",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/platform-server": "^16.2.0",
+    "@angular/router": "^16.2.0",
+    "@nguniversal/express-engine": "^16.2.0",
     "express": "^4.18.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0",
-    "@angular/cli": "^19.1.8",
-    "@angular-devkit/build-angular": "^19.1.8"
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^19.1.0",
+    "@angular/compiler-cli": "^16.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/mongoose": "^5.11.97",
@@ -45,10 +44,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.1.6"
   },
   "engines": {
-    "node": "18.x",
+    "node": ">=18.x",
     "npm": ">=9"
   },
   "packageManager": "npm@9.6.7"
