--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
     "@angular/animations": "^16.2.0",
-    "@angular/cli": "^16.2.0",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
@@ -29,7 +27,9 @@
     "multer": "^1.4.5-lts.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "^0.13.3"
+    "zone.js": "^0.13.0", 
+    "@angular/cli": "^16.2.0",
+    "@angular-devkit/build-angular": "^16.2.0"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^16.2.0",
@@ -47,7 +47,7 @@
     "typescript": "~5.1.6"
   },
   "engines": {
-    "node": ">=18.x",
+    "node": ">=18",
     "npm": ">=9"
   },
   "packageManager": "npm@9.6.7"
