--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "build:ssr": "ng build && ng run closet-cleanup:server",
@@ -27,7 +27,7 @@
     "multer": "^1.4.5-lts.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "^0.13.0", 
+    "zone.js": "^0.13.0",
     "@angular/cli": "^16.2.0",
     "@angular-devkit/build-angular": "^16.2.0"
   },
