--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "build": "ng build --configuration production",
+    "build": "ng build --configuration production && ng run closet-cleanup:server:production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:ssr": "ng build && ng run closet-cleanup:server",
-    "serve:ssr": "node dist/server/main.js",
+    "dev:ssr": "ng build --configuration development && ng run closet-cleanup:server && node src/server.ts",
+    "serve:ssr": "node src/server.ts",
     "start": "npm run serve:ssr"
   },
   "private": true,
