--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,10 +1,11 @@
 {
-    "extends": "./tsconfig.json",
-    "compilerOptions": {
-      "outDir": "./dist/out-tsc/server",
-      "module": "commonjs"
-    },
-    "files": ["src/main.server.ts"],
-    "include": ["src/**/*.d.ts"]
-  }
-  
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "target": "ES2020",
+    "module": "commonjs",
+    "outDir": "./dist/out-tsc/server",
+    "types": ["node"]
+  },
+  "files": ["src/main.server.ts"]
+}
