--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,6 +4,18 @@
     "outDir": "./dist/out-tsc/app",
     "types": []
   },
-  "files": ["src/main.ts", "src/polyfills.ts"],
-  "include": ["src/**/*.d.ts"]
+  "angularCompilerOptions": {
+    "strictTemplates": true
+  },
+  "files": [
+    "src/main.ts",
+    "src/polyfills.ts"
+  ],
+  "include": ["src/**/*.d.ts"],
+  "exclude": [
+    "src/**/*.spec.ts",
+    "src/app/app.module.ts",
+    "src/app/app.config.server.ts",
+    "src/app/app.routes.server.ts"
+  ]
 }
