--- a/angular.json
+++ b/angular.json
@@ -1,9 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "cli": {
-    "analytics": false
-  },
+  "cli": { "analytics": false },
   "projects": {
     "closet-cleanup": {
       "projectType": "application",
@@ -18,14 +16,9 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "tsConfig": "tsconfig.app.json",
+            "assets": ["src/favicon.ico","src/assets"],
+            "styles": ["src/styles.css"],
             "scripts": []
           },
           "configurations": {
@@ -69,9 +62,7 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "closet-cleanup:build"
-          },
+          "options": { "browserTarget": "closet-cleanup:build" },
           "configurations": {
             "production": {
               "browserTarget": "closet-cleanup:build:production"
