--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,11 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "esModuleInterop": true,
-    "target": "ES2020",
-    "module": "commonjs",
     "outDir": "./dist/out-tsc/server",
+    "module": "commonjs",
     "types": ["node"]
   },
-  "files": ["src/main.server.ts"]
+  "files": ["src/main.server.ts"],
+  "exclude": ["src/**/*.spec.ts"]
 }
