--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "closet-cleanup",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
