--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build:browser": "ng build --configuration production",
+    "build:client": "ng build --configuration production",
     "build:server": "ng run closet-cleanup:server:production",
-    "build": "npm run build:browser && npm run build:server",
+    "build": "npm run build:client && npm run build:server",
+    "build:ssr": "npm run build",
     "serve:ssr": "node dist/closet-cleanup/server/main.js",
     "dev:ssr": "ng run closet-cleanup:serve-ssr",
-    "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "dependencies": {
@@ -28,8 +28,6 @@
     "express": "4.18.2",
     "mongoose": "7.6.0",
     "multer": "1.4.5-lts.2",
-    "rxjs": "7.8.1",
-    "tslib": "2.6.2",
     "zone.js": "0.13.0"
   },
   "devDependencies": {
@@ -37,24 +35,8 @@
     "@angular/cli": "16.2.10",
     "@angular/compiler-cli": "16.2.12",
     "@types/express": "^4.17.21",
-    "@types/jasmine": "4.3.5",
-    "@types/mongoose": "5.11.97",
-    "@types/multer": "1.4.7",
     "@types/node": "^18.17.1",
-    "browserify-zlib": "0.2.0",
-    "buffer": "6.0.3",
-    "core-js": "3.32.0",
-    "crypto-browserify": "3.12.0",
-    "os-browserify": "0.3.0",
-    "path-browserify": "1.0.1",
-    "process": "0.11.10",
-    "querystring-es3": "0.2.1",
-    "stream-browserify": "3.0.0",
-    "stream-http": "3.2.0",
-    "ts-node": "10.9.1",
-    "typescript": "5.1.6",
-    "url": "0.11.1",
-    "util": "0.12.5"
+    "typescript": "5.1.6"
   },
   "engines": {
     "node": ">=18",
