--- a/vercel.json
+++ b/vercel.json
@@ -2,27 +2,27 @@
   "version": 2,
   "builds": [
     {
+      
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist/closet-cleanup/browser" }
+      "config": { "distDir": "dist/browser" }
     },
     {
+      
       "src": "src/server.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*\\.(?:js|css|json|png|jpg|jpeg|svg|ico|map))",
-      "dest": "dist/closet-cleanup/browser/$1"
+      
+      "src": "/(.*\\.(?:js|css|json|png|jpg|jpeg|svg|ico|map))$",
+      "dest": "/dist/browser/$1"
     },
     {
-      "src": "/api/(.*)",
-      "dest": "src/server.ts"
-    },
-    {
+      
       "src": "/(.*)",
-      "dest": "src/server.ts"
+      "dest": "/src/server.ts"
     }
   ]
 }
