--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "closet-cleanup",
   "version": "0.0.0",
-  "private": true,
-  "type": "module",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build:client": "ng build --configuration production",
-    "build:server": "ng run closet-cleanup:server:production",
-    "build": "npm run build:client && npm run build:server",
-    "build:ssr": "npm run build",
-    "serve:ssr": "node dist/closet-cleanup/server/main.js",
-    "dev:ssr": "ng run closet-cleanup:serve-ssr",
-    "test": "ng test"
+    
+    "build": "ng build --configuration production",
+
+    
+    "build:ssr": "ng run closet-cleanup:server:production",
+
+    
+    "vercel-build": "npm run build && npm run build:ssr"
   },
   "dependencies": {
     "@angular/animations": "16.2.12",
@@ -24,22 +21,16 @@
     "@angular/platform-browser-dynamic": "16.2.12",
     "@angular/platform-server": "16.2.12",
     "@angular/router": "16.2.12",
-    "dotenv": "16.3.1",
-    "express": "4.18.2",
-    "mongoose": "7.6.0",
-    "multer": "1.4.5-lts.2",
+    "@nguniversal/express-engine": "16.2.12",
+    "express": "^4.18.2",
     "zone.js": "0.13.0"
+    
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "16.2.10",
     "@angular/cli": "16.2.10",
-    "@angular/compiler-cli": "16.2.12",
-    "@types/express": "^4.17.21",
-    "@types/node": "^18.17.1",
+    "@nguniversal/builders": "16.2.12",
     "typescript": "5.1.6"
-  },
-  "engines": {
-    "node": ">=18",
-    "npm": ">=9"
+    
   }
 }
