--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
   "name": "closet-cleanup",
   "version": "0.0.0",
   "scripts": {
-    
     "build": "ng build --configuration production",
-
-    
-    "build:ssr": "ng run closet-cleanup:server:production",
-
-    
-    "vercel-build": "npm run build && npm run build:ssr"
+    "build:server": "ng run closet-cleanup:server:production",
+    "build:ssr": "npm run build && npm run build:server",
+    "serve:ssr": "node dist/closet-cleanup/server/main.js"
   },
   "dependencies": {
     "@angular/animations": "16.2.12",
@@ -21,16 +17,18 @@
     "@angular/platform-browser-dynamic": "16.2.12",
     "@angular/platform-server": "16.2.12",
     "@angular/router": "16.2.12",
-    "@nguniversal/express-engine": "16.2.12",
-    "express": "^4.18.2",
+    "express": "4.18.2",
+    "mongoose": "7.6.0",
+    "multer": "1.4.5-lts.2",
+    "rxjs": "7.8.1",
     "zone.js": "0.13.0"
-    
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "16.2.10",
     "@angular/cli": "16.2.10",
-    "@nguniversal/builders": "16.2.12",
+    "@angular/compiler-cli": "16.2.12",
+    "@nguniversal/express-engine": "16.2.10",
+    "@nguniversal/builders": "16.2.10",
     "typescript": "5.1.6"
-    
   }
 }
