--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,19 +1,19 @@
+// tsconfig.app.json
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist/out-tsc/app",
-    "types": []
-  },
-  "angularCompilerOptions": {
-    "strictTemplates": true
+    "types": []        // ← no test runner types here
   },
   "files": [
     "src/main.ts",
     "src/polyfills.ts"
   ],
-  "include": ["src/**/*.d.ts"],
+  "include": [
+    "src/**/*.d.ts"
+  ],
   "exclude": [
-    "src/**/*.spec.ts",
+    "src/**/*.spec.ts",   
     "src/app/app.module.ts",
     "src/app/app.config.server.ts",
     "src/app/app.routes.server.ts"
