--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
   "include": [
     "src/**/*.ts",
     "src/server-bundle.d.ts"
-  ],
+, "server.ts"  ],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
