--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,8 @@
       "use": "@vercel/static-build",
       "config": { "distDir": "dist/closet-cleanup/browser" }
     },
-    {
-      "src": "server.ts",
-      "use": "@vercel/node"
+    {"src": "dist/closet-cleanup/server/main.js",
+     "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -17,8 +16,8 @@
       "dest": "/dist/closet-cleanup/browser/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "server.ts"
+       "src": "/(.*)",
+     "dest": "/dist/closet-cleanup/server/main.js"
     }
   ]
 }
