--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,17 @@
   "version": 2,
   "builds": [
     {
+      
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist/closet-cleanup/browser" }
+      
+      "config": { "distDir": "dist/closet-cleanup" }
     }
   ],
   "routes": [
+    
     { "handle": "filesystem" },
+    
     { "src": "/.*", "dest": "/index.html" }
   ]
 }
